# Error-Hub

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
errorhub/: decorator.py  exceptions.py  models.py  setup.py
errorhub/errorhub/: decorator.py  exceptions.py  helper.py  models.py
errorhub/errorhub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
