[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "errorhub"  # this is your package name on PyPI
version = "0.1.5"
description = "All you will ever need for error handling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="Yash Pakhale", email="pakhaleyash7@gmail.com" }
]
license = { text = "MIT" }
dependencies = ["fastapi==0.116.1", "pydantic==2.11.7", "dotenv==0.9.9", "requests==2.32.5"]

[project.urls]
Homepage = "https://github.com/unfettered-one/Error-Hub.git"
